(lang dune 3.6)

(name aoc2022)

(generate_opam_files true)

(source
 (github dimitrijer/aoc2022))

(authors "Dimitrije Radojević")

(license LICENSE)

(package
 (name aoc2022)
 (synopsis "My solutions to AOC 2022")
 (description "Solutions to Advent of Code 2022 in OCaml")
 (depends ocaml dune)
 (tags
  (aoc2022 aoc)))
